/*
 * $Id: ChangeLog,v 1.5986 2008/03/20 16:59:20 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-03-20 14:17 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/genhrb.c
    * Corrected geeneration of SYM_FUNC attribute

2008-03-20 12:25 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * include/hbexprb.c
    ! Fixed GPF trap

2008-03-20 18:25 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbapi.h
    ! Guarded hb_arraySetNLL() declaration with #ifndef HB_LONG_LONG_OFF.
  * source/vm/arrays.c
    ! Fixed trace in hb_arraySetNInt().

2008-03-20 10:50 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/adsmgmnt.c
    * Missing type casts

  * include/hbgtcore.h
  * source/rtl/hbgtcore.c
    * Reinstated default of "win" to s_defaultGT, as it doesn't conflict with additional deafult setting options
    * Made hb_gt_FindDefault() public, so that it's possible to find if default has been explicly set
  * source/vm/mainstd.c
    - Removed unneeded call to hb_gtSetDefault()

2008-03-20 08:35 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/mainwin.c
    - Removed link request and setting default of GUI

2008-03-20 1:50 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/adsmgmnt.c
    * ADSMGGetOpenTables()
         added args for User, Connection
         /* nMaxNumberOfFilesToReturn, cUserName, nConnection */

    * ADSMGGetOpenIndexes()
         added args for TableName, User, Connection
         /* nMaxNumberOfFilesToReturn, cTableName, cUserName, nConnection */

2008-03-20 09:55 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/dynlibhb.c
     + added OS/2 support to LIBLOAD/LIBFREE.

2008-03-20 09:40 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * config/os2/gcc.cf
   * config/os2/global.cf
     * changed for new GT system.
